# ember

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  holmes_plan.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
docs/: Makefile  algorithm.rst  conf.py  coordinate_system.rst  index.rst  install.rst  refs.bib  solver_configuration.rst
docs/_ext/: tikz.py
docs/_tikz/: cell_indexing.tikz  coordinate_system.tikz  face_area.tikz
docs/api/: average.rst  block.rst  convergence_history.rst  cut.rst  fluid.rst  grid.rst  patch.rst  solver.rst
docs/auto_examples/: run_duct.codeobj.json  run_duct.ipynb  run_duct.py  run_duct.py.md5  run_duct.rst
docs/dev/: viscous_kernels.md
examples/: README.txt  plot_block_basics.py  plot_cut_average.py  plot_isentropic_nozzle.py  plot_joule_cycle.py  plot_patches.py  plot_shocked_nozzle.py  run_duct.py
scripts/: bench_mgfuse_ab.csv  bench_mgirs_ab.csv  bench_smooth.py  bench_viscous.py  duct_cfl_descend.sh  duct_cfl_stability.md  duct_cfl_sweep.sh  duct_cfl_timing.py  duct_cfl_timing_cnv_plot.py  mg_irs_bench.py  run_duct.py
src/ember/: __init__.py  average.py  basepatch.py  block.py  block_restart.py  block_util.py  cases.py  collections.py  convergence_history.py  cooling.py  cusp.py  cut.py  fluid.py  fluxes.py  geometry.py  grid.py  inlet.py  inlet_nonreflecting.py  inviscid.py  mixing.py  mixing_communicator.py  mixing_nonreflecting.py  nonmatch.py  nonmatch_communicator.py  nonreflecting.py  outlet.py  outlet_nonreflecting.py  patch.py  periodic.py  periodic_communicator.py  perturbation.py  plot3d.py  probe.py  rotating.py  scree.py  set_iter.py  solver.py  struct.py  ts3.py  util.py  (+1 more)
src/ember/_fortran/: adapt.f90  block.f90  distribute.f90  filter.f90  geometry.f90  indexing.f90  interpolate.f90  matvec.f90  mixing.f90  multigrid.f90  operators.f90  perfect.f90  perturbation.f90  polar.f90  residual.f90  scree.f90  smooth_const.f90  smooth_v2.f90  viscous.f90
tests/: conftest.py  nonreflecting_util.py  test_average.py  test_block.py  test_block_copy_patches.py  test_block_core.py  test_block_ell_i_perk.py  test_block_i_perk.py  test_block_set_iterative.py  test_block_util.py  test_convergence_history.py  test_cut.py  test_cut_scipy_parity.py  test_fluid.py  test_fluxes.py  test_fmg.py  test_geometry.py  test_grid.py  test_grid_connectivity.py  test_grid_resample.py  test_grid_utilities.py  test_inlet.py  test_inlet_nonreflecting.py  test_inviscid_patch.py  test_io.py  test_mg_irs.py  test_mixing_integration.py  test_mixing_nonreflecting.py  test_multigrid.py  test_nonmatch_communicator.py  test_nonmatch_patch.py  test_nonreflecting.py  test_operators.py  test_outlet.py  test_outlet_nonreflecting.py  test_patch.py  test_periodic_communicator.py  test_perturbation.py  test_polar_source.py  test_probe.py  (+19 more)
tests/data/: F_body_golden.npz  duct.cnv  log_duct.txt  residual_golden.npz  viscous_phases_golden.npz
tools/: build_docs.sh  check_compile.sh  check_dead_code.sh  check_member_order.py  check_no_claude_commit_msg.sh  check_no_typing.sh  check_spec0.py  check_stale_build_artifacts.sh  compile_wilkes.sh  profile_main_loop.py  run_duct.py  run_nrbc_reflection.py
